--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ form {
 
 footer {
     font-size: 12px;
-    font-family: monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     margin-top: 20px;
     padding-top: 10px;
